[gd_scene load_steps=4 format=3 uid="uid://blhgel1pq1gj3"]

[ext_resource type="PackedScene" uid="uid://c5xl2lhvp56w3" path="res://scenes/levels/level_1_frames/texture_2.tscn" id="2_ve0hl"]
[ext_resource type="Script" uid="uid://d0cw0fb0mp2kh" path="res://scenes/levels/level_1_frames/frame_2.gd" id="2_wv580"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_law6f"]
size = Vector2(116.5, 66.5)

[node name="Frame" type="Area2D" groups=["frames"]]
monitoring = false
script = ExtResource("2_wv580")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(57.75, 32.75)
shape = SubResource("RectangleShape2D_law6f")

[node name="TextureRect" parent="." instance=ExtResource("2_ve0hl")]
visible = false

[connection signal="correct" from="TextureRect" to="." method="_on_texture_rect_correct"]
[connection signal="not_correct" from="TextureRect" to="." method="_on_texture_rect_not_correct"]
